<unreleased>

+ Added makerpm.sh
* Update deployment scripts for GNU/Linux
  * Add picta-dlg launcher bash script


v0.12.17

+ Added support for YouTube download (youtube.com, youtu.be, m.youtube.com).
* It is only necessary to configure Picta username and password for Playlist downloads, whether from the site or personal.
* Updated Frequently Asked Questions and Answers (F.A.Q)
  Explains how to use the GUI in 32-bit versions of Windows
* Add Spec for openSUSE in deployment


v0.12.16

* Update picta-dl.dll to x86


v0.12.15

* Enable support to Youtube URLs
* Marge Format Selection between Picta and Youtube
* Fix the Video Quality for Youtube


v0.12.14

* Updates Depends for Debian control
* Update README.md
+ Add picta-dl-gui.svg
* Update .pro
+ Add Bouml .prj and .png to docs
* Fix QPalette::ToolTipText in Dark styles
+ Add PDLG_DARK environment variable to set Dark styles


v0.12.13

* Update Debianized folder
* Update .pro
* Update Release workflow


v0.12.12

* Add logs to makedeb.sh
* Update Release workflow


v0.12.11

+ Add deployment GNU/Linux Debian


v0.12.10

* Compatibilidad del fuente mainwindow.cpp para Qt 5.7.1 (Qt Creator 4.2.0, GCC 6.3.0)


v0.12.9

* Fix Only audio 


v0.12.8

+ Add support for GNU/Linux using directives
+ Add function inline CenterWidgets to mainwindow.h
* Update Tests (TestPicta-dl_GUI.pro, tests/testmainwindow.cpp)


v0.12.7

+ Add .astylerc Artistic Style project file
+ Add docs/MSYS2-MINGW-Qt5-AStyle.md
* Reformat sources (*.cpp,*.h) using Artistic Style 3.1


v0.12.6

* Change Resources/Styles/winApp.qss background-color: #0a0a0a
* Change mainwindow.ui ToolTips


v0.12.5

* Cambio de los iconos para el tema oscuro o claro según lo tenga configurado en su sistema.

+ Agregado el parametro --newline para mejorar la obtención del progreso de descarga.

+  ¡Feliz Navidad y Año Nuevo! 


v0.12.4

* Add Resources/styles.qrc to Picta-dl_GUI.pro


v0.12.3

* Remove min-width from winApp.qss


v0.12.2
